Multimple fixes Initial post priority to 0 instead of 50 Align instagram embedded videos to center even if it's not loaded Sort posts on pageindex template by priority and creation time

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -67,6 +67,6 @@ strong {
 .grid-item {
 	margin-bottom: 20px;
 }
-.instagram-media.instagram-media-rendered {
+.instagram-media {
 	margin: 0 auto !important;
 }
